# SPDX-License-Identifier: EUPL-1.2 OR GPL-3.0-or-later
[package]
name = "rust-vmm-helper-cli"
version = "0.1.0"
edition = "2024"
authors = ["Manos Pitsidianakis <manos.pitsidianakis@linaro.org>"]
description = "CLI for automating rust-vmm maintainer actions"
repository = "https://github.com/epilys/rust-vmm-helper-cli"
readme = "README.md"
license = "EUPL-1.2 OR GPL-3.0-or-later"

[dependencies]
async-trait = { version = "0.1.88" }
clap = { version = "4.5.35", features = ["derive"] }
# hyper = { version = "1.6.0" }
# hyper-rustls = { version = "0.27.7" }
# hyper-timeout = { version = "0.5.2" }
# hyper-util = { version = "0.1.14" }
# bytes = { version = "1.10.1" }
# futures = { version = "0.3.31" }
# futures-util = { version = "0.3.31" }
codeowners-rs = { version = "0.1.1" }
env_logger = { version = "0.9.0" }
# tower = { version = "0.5.2" }
# tower-http = { version = "0.6.6", features = ["set-header", "map-response-body", "trace","decompression-full"] }
# http = { version = "1.3.1" }
# http-body = { version = "1.0.1" }
http-body-util = { version = "0.1.3" }
indexmap = { version = "2.10.0", features = ["serde"] }
lazy_static = { version = "1.2.0" }
log = { version = "0.4.6" }
octocrab = { version = "0.44.1" }
serde = { version = "1.0.59" }
serde_derive = { version = "1.0.59" }
serde_json = { version = "1.0" }
serde_path_to_error = { version = "0.1.17" }
tokio = { version = "1.45.1", features = ["io-std","io-util","macros","rt-multi-thread","process"] }
toml = { version = "0.5.3" }
